Fix todo link scrollable overflow on mobile devices

--- a/tln/static/tln/main.css
+++ b/tln/static/tln/main.css
@@ -555,22 +555,20 @@ body #sidebar {
     margin-top: -10px;
     height: 220px;
     width: 294px !important;
-    transform: rotate(32deg); }
-#todo-logo-nav:not(.todo-logo-nav-mobile) {
+    transform: rotate(32deg);
     transition: transform ease .9s; }
 #todo-logo-nav.todo-logo-nav-mobile {
-    opacity: 0;
-    transition: opacity ease-in .3s;
-    top: -130px;
-    right: 20px;
+    top: -80px;
+    right: -62px;
     height: 120px;
     width: 160px !important; }
 #todo-logo-nav > img {
     position: absolute;
     width: 100%; }
 
-#todo-logo-nav:not(.todo-logo-nav-mobile):hover,
-#top-nav-h #todo-logo-nav:not(.todo-logo-nav-mobile):hover {
+#todo-logo-nav:hover,
+#todo-logo-nav.todo-logo-nav-mobile.mobile-hover,
+#top-nav-h #todo-logo-nav:hover {
     transform: rotate(22deg) translate(-9%, 68%); }
 
 #todo-logo-nav .todo-logo-glow { opacity: 0; transition: opacity ease-in .9s; }
